@@ -71,8 +71,6 @@ int i =  obj.FieldB  //无需加入屏障，因为不是对象引用
 - ZGC中读屏障的代码作用：在对象标记和转移过程中，用于确定对象的引用地址是否满足条件，并作出相应动作。
 
 
-```c```
-
 ##### ZGC收集器运作过程
 
 ```text
@@ -102,5 +100,27 @@ ZGC每次回收都会扫描所有的Region，用范围更大的扫描成本换�
 
 ###### ZGC收集器运作过程示意图
 ![aW48fg.png](https://s1.ax1x.com/2020/08/07/aW48fg.png)
+
+
+##### How(怎么做)
+```shell script
+-Xms10G -Xmx10G 
+-XX:ReservedCodeCacheSize=256m -XX:InitialCodeCacheSize=256m 
+-XX:+UnlockExperimentalVMOptions -XX:+UseZGC 
+-XX:ConcGCThreads=2 -XX:ParallelGCThreads=6 
+-XX:ZCollectionInterval=120 -XX:ZAllocationSpikeTolerance=5 
+-XX:+UnlockDiagnosticVMOptions -XX:-ZProactive 
+-Xlog:safepoint,classhisto*=trace,age*,gc*=info:file=/opt/logs/logs/gc-%t.log:time,tid,tags:filecount=5,filesize=50m
+```
+
+- -Xms -Xmx：堆的最大内存和最小内存，这里都设置为10G，程序的堆内存将保持10G不变。
+- -XX:ReservedCodeCacheSize -XX:InitialCodeCacheSize: 设置CodeCache的大小， JIT编译的代码都放在CodeCache中，一般服务64m或128m就已经足够。我们的服务因为有一定特殊性，所以设置的较大，后面会详细介绍。
+- -XX:+UnlockExperimentalVMOptions -XX:+UseZGC：启用ZGC的配置。
+- -XX:ConcGCThreads：并发回收垃圾的线程。默认是总核数的12.5%，8核CPU默认是1。调大后GC变快，但会占用程序运行时的CPU资源，吞吐会受到影响。
+- -XX:ParallelGCThreads：STW阶段使用线程数，默认是总核数的60%。
+- -XX:ZCollectionInterval：ZGC发生的最小时间间隔，单位秒。
+- -XX:ZAllocationSpikeTolerance：ZGC触发自适应算法的修正系数，默认2，数值越大，越早的触发ZGC。
+- -XX:+UnlockDiagnosticVMOptions -XX:-ZProactive：是否启用主动回收，默认开启，这里的配置表示关闭。
+- -Xlog：设置GC日志中的内容、格式、位置以及每个日志的大小
 
 ### [GC介绍](../README.md)
